[package]
name = "bevy_commander"
version = "0.1.0"
edition = "2021"
authors = ["aecsocket <aecsocket@tutanota.com>"]
description = "Command sending and console library for Bevy"
homepage = "https://github.com/aecsocket/bevy-commander"
repository = "https://github.com/aecsocket/bevy-commander"
license = "MIT OR Apache-2.0"

[features]
inbuilt = []
readline = ["dep:rustyline"]
default = ["inbuilt", "readline"]

[dependencies]
bevy = { version = "0.11", default-features = false }
clap = { version = "4.3.21", features = ["derive"] }
rustyline = { version = "12.0.0", optional = true }

[dev-dependencies]
bevy = "0.11"

[workspace]
#members = ["bevy_commander_derive"]
