[package]
name = "bevy_commandeer"
version = "0.1.0"
edition = "2021"
authors = ["aecsocket <aecsocket@tutanota.com>"]
description = "Command sending and console library for Bevy"
homepage = "https://github.com/aecsocket/bevy-commandeer"
repository = "https://github.com/aecsocket/bevy-commandeer"
license = "MIT OR Apache-2.0"

[features]
default = ["derive", "inbuilt", "readline", "ui"]
derive = ["dep:bevy_commandeer_derive"]
inbuilt = []
readline = ["dep:rustyline", "dep:shlex"]
ui = ["dep:bevy_egui", "dep:shlex"]

[dependencies]
bevy = { version = "0.11", default-features = false }
bevy_commandeer_derive = { path = "./bevy_commandeer_derive", optional = true }
clap = { version = "4.3.21", features = ["derive"] }
shlex = { version = "1.1.0", optional = true }
rustyline = { version = "12.0.0", optional = true }
bevy_egui = { version = "0.21", optional = true }

[dev-dependencies]
bevy = "0.11"

[workspace]
members = ["bevy_commandeer_derive"]
