[package]
name = "bevy_commands"
version = "0.1.0"
edition = "2021"
description = "Command input and processing tool for Bevy"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/bevy-commands"
keywords = [ "gamedev", "bevy" ]
categories = [ "game-development", "gui" ]
license = "MIT OR Apache-2.0"

[features]
default = [ "inbuilt" ]

## Provides default commands.
inbuilt = [ "derive" ]

## Allows using the `AppCommand` derive macro.
derive = [ "dep:bevy_commands_derive" ]

## Allows accepting stdio input as commands, using [`rustyline`](https://docs.rs/rustyline).
stdio = [ "dep:rustyline", "dep:shlex", "expedition/termcolor" ]

## Allows displaying a console UI for commands, using [`bevy_egui`](https://docs.rs/bevy_egui).
ui = [ "dep:bevy_egui", "dep:shlex", "expedition/egui" ]

[dependencies]
bevy = { version = "0.11", default-features = false }
expedition = "0.2"
clap = { version = "4.3.21", features = [ "derive" ] }
bevy_commands_derive = { path = "./bevy_commands_derive", optional = true }
shlex = { version = "1.1.0", optional = true }
rustyline = { version = "12.0.0", optional = true }
termcolor = { version = "1", optional = true }
bevy_egui = { version = "0.21", optional = true }

[dev-dependencies]
bevy = "0.11"

[workspace]
members = [ "bevy_commands_derive" ]
