[package]
name = "bevy_commandeer_derive"
version = "0.1.0"
edition = "2021"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
description = "Derive macros for bevy_commandeer"
homepage = "https://github.com/aecsocket/bevy-commandeer"
repository = "https://github.com/aecsocket/bevy-commandeer"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
