[package]
name = "bevy_commands_derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for bevy_commandeer"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
homepage = "https://github.com/aecsocket/bevy-commandeer"
repository = "https://github.com/aecsocket/bevy-commandeer"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
